# doc_exports

./: .gitignore  Dockerfile  Dockerfile.worker  README.md  docker-compose.portainer.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
docs/: ACCEPTANCE.md  OPERATIONS.md  SECURITY.md  TEMPLATES.md
export_service/: __init__.py  auth.py  config.py  db.py  doc_renderer.py  excel_renderer.py  jobs.py  main.py  models.py  pdf_converter.py  ppt_renderer.py  storage.py  template_setup.py  text_renderer.py  worker.py  zipper.py
openwebui_plugin/: export_plugin.js  export_tool.py
tests/: conftest.py  test_api_flow.py  test_db_migrations.py  test_renderers.py
