[project]
name = "open-webui-export-service"
version = "0.1.0"
description = "Server-side export plugin for Open WebUI sessions"
authors = [{name = "OpenAI Codex"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pydantic-settings",
    "SQLAlchemy>=2.0",
    "alembic",
    "python-multipart",
    "docxtpl",
    "python-docx",
    "pandas",
    "openpyxl",
    "pillow",
    "python-pptx",
    "celery[redis]",
    "redis",
    "python-dateutil",
    "httpx",
    "jinja2",
    "python-slugify",
    "python-dotenv"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "starlette",
    "anyio"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["export_service"]
